# camera_chat

./: .gitignore  Makefile  README.md  inventory_context.txt  pyproject.toml
sql/: get_raw_model_database.sql
src/: app.py
src/config/: logger.py  settings.py
src/core/: dataset.py  prompt.py
src/main/: __init__.py  routes.py
src/services/: bq_helper.py  chat.py  dataset.py
src/static/css/: style.css
src/static/js/: chat.js
src/templates/: index.html
