[project]
name = "camera-chat"
version = "0.1.0"
description = "Camera llm"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "flask>=3.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src/"]

[tool.hatch.build.targets.wheel]
packages = ["src/"]

[tool.uv.sources]
camera-chat = { workspace = true }

[dependency-groups]
dev = [
    "camera-chat",
    "ruff>=0.11.12",
    "sqlfluff>=3.4.0",
]
